<resources>
    <string name="app_name">Calculator</string>
    <string name="add">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="empty_field_error">Input fields contain empty value.</string>
    <string name="division_by_zero_error">Illegal operation. Division by zero.</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">0</string>
    <string name="ac">ac</string>
    <string name="sqrt">sqrt</string>
    <string name="pow2">x^2</string>
    <string name="powY">x^y</string>
    <string name="procent">%</string>
    <string name="dot">.</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>
    <string name="backspace"><![CDATA[<-]]></string>
    <string name="confirm_delete">Delete the item?</string>
    <string name="cancel">Cancel</string>
    <string name="OK">Ok</string>
    <string name="Dec">Dec</string>
    <string name="Oct">Oct</string>
    <string name="Hex">Hex</string>
    <string name="Bin">Bin</string>
</resources>

